# tg-fuse

./: .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  TESTING.md  TG_WRAPPER_DESIGN.md  TG_WRAPPER_README.md  TG_WRAPPER_USAGE.md
.github/: CODEOWNERS
examples/: CMakeLists.txt  simple_client.cpp
include/fuse/: background_prefetcher.hpp  constants.hpp  data_provider.hpp  message_formatter.hpp  messages_cache.hpp  mock_provider.hpp  operations.hpp  platform.hpp  telegram_provider.hpp  vfs.hpp
include/tg/: async.hpp  bustache_formatters.hpp  cache.hpp  client.hpp  exceptions.hpp  formatters.hpp  rate_limiter.hpp  types.hpp
src/: CMakeLists.txt  main.cpp
src/ctl/: cache.cpp  cache.hpp  config.cpp  config.hpp  login.cpp  login.hpp  main.cpp  users.cpp  users.hpp
src/fuse/: background_prefetcher.cpp  message_formatter.cpp  messages_cache.cpp  mock_provider.cpp  operations.cpp  platform.cpp  telegram_provider.cpp  vfs.cpp
src/fused/: main.cpp
src/tg/: cache.cpp  client.cpp  formatters.cpp  rate_limiter.cpp  types.cpp
tests/: CMakeLists.txt  example_test.cpp
tests/tg/: async_test.cpp  bustache_format_test.cpp  cache_test.cpp  client_init_test.cpp  formatters_test.cpp  types_test.cpp
